disable fund request inputs filled by iconnect

--- a/react/assets/forus-webshop/scss/includes/components/_ui-controls.scss
+++ b/react/assets/forus-webshop/scss/includes/components/_ui-controls.scss
@@ -180,6 +180,14 @@
                 font-size: 20px;
             }
         }
+
+        &.ui-control-step-disabled {
+            pointer-events: none;
+
+            .ui-control-step-icon {
+                cursor: default;
+            }
+        }
     }
 
     &.ui-control-checkbox {
