--- a/react/assets/forus-webshop/scss/includes/layout/_footer.scss
+++ b/react/assets/forus-webshop/scss/includes/layout/_footer.scss
@@ -251,7 +251,7 @@
 
     @media screen and (max-width: 1000px) {
         .block-markdown {
-            text-align: center;
+            text-align: left;
 
             * {
                 text-align: inherit;
