--- a/react/assets/forus-webshop/scss/includes/blocks/block-banner.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-banner.scss
@@ -261,13 +261,13 @@
                     padding: 40px 25px 40px;
                     display: flex;
                     flex-direction: column;
-                    align-items: center;
+                    align-items: start;
                     gap: 10px;
 
                     .banner-title {
                         margin: 0 0;
                         font: 700 30px/40px var(--base-font);
-                        text-align: center;
+                        text-align: left;
                     }
 
                     .banner-description {
@@ -275,14 +275,14 @@
                         font: 400 14px/21px var(--base-font);
 
                         * {
-                            text-align: center !important;
+                            text-align: left !important;
                         }
                     }
 
                     .banner-actions {
                         display: flex;
                         flex-direction: column;
-                        align-items: center;
+                        align-items: start;
                     }
                 }
             }
