--- a/react/assets/forus-webshop/scss/includes/blocks/block-fund.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-fund.scss
@@ -56,23 +56,23 @@
         }
 
         .fund-details-items {
-            display: flex;
-            flex-direction: row;
+            display: grid;
+            grid-auto-flow: column;
+            grid-auto-rows: auto auto;
+            gap: 5px 10px;
+            align-items: start;
 
-            .fund-details-item {
-                flex-direction: column;
-                width: 100%;
+            .fund-details-item-label {
+                font: 600 14px var(--base-font);
+                color: #646f79;
+                grid-row: 1;
+            }
 
-                .fund-details-item-label {
-                    font: 600 14px var(--base-font);
-                    color: #646f79;
-                    margin-bottom: 5px;
-                }
-
-                .fund-details-item-value {
-                    font: 600 16px var(--base-font);
-                    color: #303030;
-                }
+            .fund-details-item-value {
+                font: 600 16px var(--base-font);
+                color: #303030;
+                grid-row: 2;
+                margin: 0;
             }
         }
     }
@@ -90,8 +90,19 @@
             }
 
             .fund-details-items {
-                gap: 20px;
-                flex-direction: column;
+                display: block;
+
+                .fund-details-item-label {
+                    margin-bottom: 5px;
+                }
+
+                .fund-details-item-value {
+                    margin-bottom: 20px;
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                }
             }
         }
     }
