add reservations custom fields for provider

--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -103,6 +103,7 @@
 @import 'blocks/block-attachments-list.scss';
 @import 'blocks/block-request-clarification.scss';
 @import 'blocks/block-product-media-uploader.scss';
+@import 'blocks/block-file-uploader';
 
 // Select controls
 @import 'select-controls/select-control-funds';
