--- a/react/assets/forus-webshop/scss/includes/blocks/block-preferences.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-preferences.scss
@@ -8,6 +8,7 @@
         padding: 10px 25px;
         cursor: pointer;
         transition: background .4s;
+        outline-offset: -2px !important;
 
         .preference-option-details {
             flex-grow: 1;
