--- a/react/assets/forus-webshop/scss/includes/components/card.scss
+++ b/react/assets/forus-webshop/scss/includes/components/card.scss
@@ -172,6 +172,11 @@
             padding: 15px;
         }
 
+        &.card-section-md-vertical {
+            padding-top: 15px;
+            padding-bottom: 15px;
+        }
+
         &.card-section-sm {
             padding: 10px;
         }
