--- a/react/assets/forus-webshop/scss/style-webshop-schagen-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-schagen-vars.scss
@@ -75,7 +75,7 @@ $primaryColorLight: #1c8fd7;
 
     // navbar (start modal primary)
     --tc-start-btn: #fff;
-    --btn-start-bg: #d13e41;
+    --btn-start-bg: #ba2f2f;
     --btn-start-btn: #305dfb;
     --btn-start-border: transparent;
 
@@ -122,9 +122,9 @@ $primaryColorLight: #1c8fd7;
     --footer_social_border_color: var(--footer_color);
     --footer_social_border_radius: var(--border-radius);
 
-    --footer-copyright-color: var(--footer_color_link);
+    --footer-copyright-color: #545457;
     --footer-copyright-font: 400 16px/30px var(--base-font);
-    --footer-copyright-background: #306fb3;
+    --footer-copyright-background: #ffffff;
     --footer-copyright-border-color: transparent;
     --footer-copyright-padding: 25px;
 
