--- a/react/assets/forus-webshop/scss/includes/blocks/block-voucher.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-voucher.scss
@@ -30,9 +30,12 @@
 
             .voucher-fund-overview-title {
                 font: 700 36px/46px var(--base-font);
+                margin: 0 0;
             }
+
             .voucher-fund-overview-description {
                 font: 400 16px/24px var(--base-font);
+                margin: 0 0;
             }
         }
     }
