--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -144,6 +144,7 @@
 @import 'includes/blocks/block-cookie-banner';
 @import 'includes/blocks/block-lang-control';
 @import 'includes/blocks/block-reservation-address';
+@import 'includes/blocks/block-progress-steps';
 @import 'includes/blocks/block-banner';
 @import 'includes/blocks/block-product-category-filter';
 @import 'includes/blocks/block-product-categories';
