--- a/react/assets/forus-webshop/scss/includes/blocks/block-action-card.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-action-card.scss
@@ -4,9 +4,10 @@
     padding: 25px;
     margin-bottom: 30px;
     position: relative;
-    border: 1px solid var(--border-color);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow);
+    background: var(--showcase-item-background);
+    border-radius: var(--showcase-item-border-radius);
+    box-shadow: var(--showcase-item-shadow);
+    border: var(--showcase-item-border);
     cursor: default;
     flex-direction: row;
 
@@ -224,6 +225,7 @@
         display: flex;
         flex-direction: column;
         text-align: center;
+        align-items: center;
 
         .block-card-body {
             display: flex;
@@ -249,7 +251,7 @@
         .block-card-details {
             .block-card-title {
                 font: 600 14px/20px var(--base-font);
-                margin: 0 0 15px;
+                margin: 0 0;
 
                 &.block-card-title-sm {
                     margin-bottom: 0;
