fix missing marketplace icon for budget funds

--- a/react/assets/forus-platform/scss/_common/includes/helpers.scss
+++ b/react/assets/forus-platform/scss/_common/includes/helpers.scss
@@ -209,5 +209,5 @@
 }
 
 @function assetUrl($url) {
-    @return if(variable-exists(buildReact), url('./assets/' + $url), url('../' + $url));
+    @return url('./assets/' + $url);
 }
