--- a/react/assets/forus-webshop/scss/includes/blocks/block-warning.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-warning.scss
@@ -1,8 +1,8 @@
 .block.block-warning {
-    display: grid;
+    display: flex;
+    flex-direction: row;
     background-color: #fffceb;
     padding: 15px;
-    grid-template-columns: 15px 1fr;
     gap: 15px;
 
     .block-warning-icon {
@@ -11,10 +11,11 @@
         justify-content: flex-start;
         font-size: 16px;
         line-height: 24px;
+        flex: 0 0 15px;
     }
 
     .block-warning-content {
-        display: grid;
+        display: flex;
         font: 400 13px/18px var(--base-font);
     }
 }
