--- a/react/assets/forus-platform/scss/_common/includes/common.scss
+++ b/react/assets/forus-platform/scss/_common/includes/common.scss
@@ -114,6 +114,10 @@ img {
     font-size: 0.9em;
 }
 
+.text-lg {
+    font-size: 1.1em!important;
+}
+
 .flex-grow {
     flex-grow: 100 !important;
 }
