add Label component on webshop and dashboards and cleanup unused label variants

--- a/react/assets/forus-webshop/scss/includes/blocks/block-fund-request.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-fund-request.scss
@@ -96,14 +96,8 @@
                 }
             }
 
-            .label {
-                &:not(:last-child):not(:last-of-type) {
-                    margin: 0;
-                }
-
-                .label-text {
-                    display: inline-block;
-                }
+            .label:not(:last-child):not(:last-of-type) {
+                margin: 0;
             }
 
             &:last-child {
