--- a/react/assets/forus-webshop/scss/includes/blocks/block-cms-funds.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-cms-funds.scss
@@ -7,12 +7,13 @@
     .fund-item {
         width: 100%;
         display: flex;
+        gap: 100px;
         padding: 0 0 40px;
         border-bottom: 1px solid var(--border-color);
         transition: box-shadow 0.4s;
 
         .fund-media {
-            width: 52%;
+            width: 42%;
             order: 1;
     
             img {
@@ -22,13 +23,12 @@
         }
     
         .fund-information {
-            width: 50%;
-            padding-left: 100px;
             text-align: left;
             order: 2;
             display: flex;
             flex-direction: column;
             align-self: center;
+            flex: 1;
 
             .fund-label {
                 margin: 0 0 5px;
@@ -70,8 +70,6 @@
     
             .fund-information {
                 order: 1;
-                padding-left: 0;
-                padding-right: 100px;
             }
         }
 
@@ -96,6 +94,7 @@
 
             .fund-item {
                 display: flex;
+                gap: 0;
                 flex-wrap: wrap;
                 flex-direction: column;
                 flex: 0 1 calc((100% - (calc(var(--gap) * 2))) / 3);
@@ -138,8 +137,7 @@
                     .fund-description {
                         margin: 0 0 0;
                         display: flex;
-                        flex-grow: 1;
-    
+
                         .block.block-markdown ul, .block.block-markdown p {
                             &:last-child {
                                 margin-bottom: 0;
@@ -184,8 +182,11 @@
             }
     
             &.block-cms-funds-2-in-row {
+                --gap: 60px;
+                gap: var(--gap);
+
                 .fund-item {
-                    width: calc(calc(100% / 2) - var(--padding));
+                    flex: 0 1 calc((100% - (calc(var(--gap) * 2))) / 2);
                 }
             }
         }
@@ -195,6 +196,7 @@
         gap: 30px;
 
         .fund-item {
+            gap: 0;
             padding: 0 0 30px;
             flex-direction: column;
 
@@ -205,7 +207,6 @@
 
             .fund-information {
                 width: 100%;
-                padding: 0;
 
                 .fund-title {
                     font: 400 20px/26px var(--base-font);
@@ -238,7 +239,6 @@
     
                 .fund-information {
                     order: 2;
-                    padding: 0;
                 }
             }
         }
